--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="main.css" rel="stylesheet">
 </head>
 
-<body bgcolor="black"></body>
+<body></body>
 <div class="arizona-hud">
     <div class="arizona-hud__player-info">
         <div class="player-info">
