--- a/freegift/index.html
+++ b/freegift/index.html
@@ -1,1 +1,1 @@
-<center> <img src="gift full.png" alt="we cloudnt load freegift img" width="121" height="121"> </center>
+<center> <img src="gift full 2.png" width="121" height="121"> </center>
